mule-user-guide/v/3.2/transports-reference.adoc
= Available Transports

[WARNING]
*This topic relates to the most recent version of Mule ESB* +
To see the corresponding topic in a previous version of Mule ESB, click http://www.mulesoft.org/documentation/display/MULE2USER/Available+Transports[here]

Following is a list of known transports (also called "providers") for Mule ESB. Some functionality is contained within modules instead of transports--see link:/mule-user-guide/v/3.2/modules-reference[Modules Reference]. For more information on transports, see the following topics:

* link:/mule-user-guide/v/3.2/connecting-using-transports[About Transports]
* link:/mule-user-guide/v/3.2/configuring-a-transport[Configuring a Transport]
* link:/mule-user-guide/v/3.2/creating-transports[Creating Transports]

If you have created a transport for Mule and would like to share it with the Mule community, please mailto:dev@mule.codehaus.org[contact us].

The following list includes some prominent transports from MuleForge (denoted by image:/documentation-3.2/download/attachments/29425751/ftiny.png?version=1&modificationDate=1228493197476[image,title="Available on MuleForge only"]). Transports that are available only in Mule Enterprise are denoted by #Unable to render embedded object: File (eetiny.png) not found.#.

Note that in Mule 3, CXF and Jersey are no longer classed as transports. They are now modules that use an underlying transport (for instance HTTP or HTTPS) to communicate between client ans service.

== Mule Transports

[cols=",",options="header",]
|===
|Transport |Description
|link:/mule-user-guide/v/3.2/ajax-transport-reference[AJAX Transport] |The Mule AJAX connector allows Mule events to be sent and received asynchronously to and from the web browser
|image:/documentation-3.2/download/attachments/29425751/ftiny.png?version=1&modificationDate=1228493197476[image,title="Available on MuleForge only"] http://www.mulesoft.org/display/ABDERA/Home[Abdera Transport] |Allows you to easily integrate with Atom feeds and Atom Publishing Protocol servers via the http://incubator.apache.org/abdera[Apache Abdera] project.
|link:/mule-user-guide/v/3.2/ejb-transport-reference[EJB Transport] |Allows EJB invocations to be made using outbound endpoints.
|link:/mule-user-guide/v/3.2/email-transport-reference[Email Transport] |This transport supplies various email connectivity options.
|link:/mule-user-guide/v/3.2/file-transport-reference[File Transport] |This transport allows files to be read and written to directories on the local file system. The connector can be configured to filter the file it reads and the way files are written, such as whether binary output is used or the file is appended to.
|link:/mule-user-guide/v/3.2/ftp-transport-reference[FTP Transport] |Allows files to be read / written to a remote FTP server.
|link:/mule-user-guide/v/3.2/http-transport-reference[HTTP Transport] |This transport supplies HTTP transport of Mule messages between applications and other Mule servers.
|link:/mule-user-guide/v/3.2/https-transport-reference[HTTPS Transport] |A secure version of the HTTP transport.
|link:/mule-user-guide/v/3.2/imap-transport-reference[IMAP Transport] |Connectivity to IMAP mail folders.
|link:/mule-user-guide/v/3.2/imap-transport-reference[IMAPS Transport] |A secure version of the IMAP transport.
|image:/documentation-3.2/download/attachments/29425751/ftiny.png?version=1&modificationDate=1228493197476[image,title="Available on MuleForge only"] #[JCR Transport]# |A transport that reads from, writes to, and observes JCR 1.0 containers. This transport is available on MuleForge.
|#Unable to render embedded object: File (eetiny.png) not found.# link:/mule-user-guide/v/3.2/jdbc-transport-reference[JDBC Transport] |A transport for JDBC connectivity. Some of its features are available only in Mule Enterprise.
|link:/mule-user-guide/v/3.2/jetty-transport-reference[Jetty Transport] |Provides support for exposing services over HTTP by embedding a light-weight Jetty server. For inbound endpoints only.
|link:/mule-user-guide/v/3.2/jetty-ssl-transport[Jetty SSL Transport] |A secure version of the Jetty transport.
|link:/mule-user-guide/v/3.2/jms-transport-reference[JMS Transport] |A Mule transport for JMS connectivity. Mule itself is not a JMS server but can use the services of any JMS 1.1 or 1.02b compliant server such as ActiveMQ and OpenJms, and commercial vendors such as Weblogic, SonicMQ, and more.
|image:/documentation-3.2/download/attachments/29425751/ftiny.png?version=1&modificationDate=1228493197476[image,title="Available on MuleForge only"] http://www.mulesoft.org/display/LDAP[LDAP Transport] |Allows you to send and receive Mule Messages to/from an LDAP directory.
|image:/documentation-3.2/download/attachments/29425751/ftiny.png?version=1&modificationDate=1228493197476[image,title="Available on MuleForge only"] http://www.mulesoft.org/display/LEGSTAR/Home[Legs4Mule Transport] |Provides transformers and connectors for IBM mainframes.
|link:/mule-user-guide/v/3.2/pop3-transport-reference[POP3 Transport] |Connectivity to POP3 inboxes.
|link:/mule-user-guide/v/3.2/pop3-transport-reference[POP3S Transport] |A secure version of the POP3 transport.
|link:/mule-user-guide/v/3.2/quartz-transport-reference[Quartz Transport] |Provides scheduling facilities with cron / interval definitions and allows Mule events to be scheduled/rescheduled.
|image:/documentation-3.2/download/attachments/29425751/ftiny.png?version=1&modificationDate=1228493197476[image,title="Available on MuleForge only"] http://www.mulesoft.org/display/RESTLET/Home[Restlet Transport] |Allows you to embed Restlet services inside of Mule, use the Restlet client API over Mule, and use URI templates to route messages inside of Mule.

|link:/mule-user-guide/v/3.2/rmi-transport-reference[RMI Transport] |Enables events to be sent and received over RMI via JRMP.
|link:/mule-user-guide/v/3.2/servlet-transport-reference[Servlet Transport] |Provides facilities for Mule components to listen for events received via a servlet request. There is also a servlet implementation that uses the Servlet transport to enable REST style services access. This transport is now bundled with the HTTP transport.
|link:/mule-user-guide/v/3.2/smtp-transport-reference[SMTP Transport] |Connectivity to SMTP servers.
|link:/mule-user-guide/v/3.2/smtp-transport-reference[SMTPS Transport] |A secure version of the SMTP transport.
|link:/mule-user-guide/v/3.2/ssl-and-tls-transports-reference[SSL Transport] |Provides secure socket-based communication using SSL or TLS.
|link:/mule-user-guide/v/3.2/stdio-transport-reference[STDIO Transport] |This transport provides connectivity to streams such as `System.in` and `System.out` and is useful for testing.
|link:/mule-user-guide/v/3.2/tcp-transport-reference[TCP Transport] |Enables events to be sent and received over TCP sockets.
|link:/mule-user-guide/v/3.2/ssl-and-tls-transports-reference[TLS Transport] |Provides secure socket-based communication using SSL or TLS.
|link:/mule-user-guide/v/3.2/udp-transport-reference[UDP Transport] |Enables events to be sent and received as datagram packets.
|link:/mule-user-guide/v/3.2/vm-transport-reference[VM Transport] |Enables event sending and receiving over VM, embedded memory, or persistent queues.
|#Unable to render embedded object: File (eetiny.png) not found.# link:/mule-user-guide/v/3.2/mule-wmq-transport-reference[WebSphere MQ Transport] |A Mule transport for WebSphere MQ. This transport is available with Mule Enterprise version 1.6 and later.
|link:/mule-user-guide/v/3.2/wsdl-connectors[WSDL Connectors] |The #[CXF Module]# allows remote web services to be invoked using their WSDL contract.
|link:/mule-user-guide/v/3.2/xmpp-transport-reference[XMPP Transport] |Provides connectivity over the XMPP (Jabber) instant messaging protocol.
|===

#Unable to render \{include} Couldn't find a space with key: MULECDEV#

Was this article helpful? link:/documentation-3.2/statpro-ranking/rank.action?pageId=29425751&useful=true[image:/documentation-3.2/images/icons/emoticons/thumbs_up.gif[yes,title="yes"]] link:/documentation-3.2/statpro-ranking/rank.action?pageId=29425751&useful=false[image:/documentation-3.2/images/icons/emoticons/thumbs_down.gif[no,title="no"]]
